# transit-analytics-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
datasets/sample_gtfs/: stops.txt
examples/: example_read_gtfs.py
src/transit_toolkit/: gtfs.py
