[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "transit-analytics-toolkit"
version = "0.1.0"
description = "Open-source toolkit for public transit analytics"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]